# rpg-platform-engine

./: .gitignore  INFORME_TOMOS_PLATAFORMA_FALLOUT4.txt  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
android/: build.gradle
core-book/: TOMO 01 - Iteracion 5.1 Libro Publicable Refinado.txt  TOMO 02 - Iteracion 5.1 Libro Publicable Refinado.txt  TOMO 05 - Iteracion 5.1 Libro Publicable Refinado.txt  TOMO 08 - Iteracion 5.1 Libro Publicable Refinado.txt  TOMO 10 - Iteracion 5.1 Libro Publicable Refinado.txt
docs/: PLATFORM_COMPLETION_ROADMAP.md  TOMO 01 - Iteracion 5.8.9 Nodos AP Movimiento Ataque.txt  TOMO 03 - Iteracion 5.1 Libro Publicable Refinado.txt  TOMO 04 - Iteracion 5.1 Libro Publicable Refinado.txt  TOMO 09 - Iteracion 5.1 Libro Publicable Refinado.txt  TOMO 10 - Iteracion 5.6 Supervivencia Correccion Final Clima DiaNoche Ciclos.txt  local-development.md
public/: manifest.webmanifest
scripts/: generate-fallout4-coverage.mjs  generate-fallout4-final-runtime.mjs  generate-fallout4-mission-details.mjs  generate-fallout4-playable-content.mjs  generate-fallout4-playable-detail-pack.mjs  generate-fallout4-runtime-depth.mjs  integrate-fallout4-tomes.mjs  lan-session-relay.mjs  local-backend.mjs  test-auth-security.mjs  test-build-budget.mjs  test-fallout4-corebooks.mjs  test-fallout4-playable-engine.mjs  test-fallout4-tome-map-catalog.mjs  test-fallout4-zero-pending.mjs  test-local-backend.mjs  (+7 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+230 files in other folders)
