[package]
name = "rpg_platform_engine"
version = "0.1.0"
description = "RPG Platform Engine"
authors = ["Miguel Angel Claros Quintero"]
edition = "2021"

[lib]
name = "rpg_platform_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
